gccida/c1/load_mems
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10105:4: error: expected ';' after expression
rtx v56; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10105:5: error: use of undeclared identifier 'v56'
rtx v56; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10106:4: error: expected ';' after expression
rtx v57; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10106:5: error: use of undeclared identifier 'v57'
rtx v57; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10123:4: error: expected ';' after expression
rtx v74; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10123:5: error: use of undeclared identifier 'v74'
rtx v74; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10124:4: error: expected ';' after expression
rtx insn; // [rsp+8h] [rbp-B0h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10124:5: error: use of undeclared identifier 'insn'
rtx insn; // [rsp+8h] [rbp-B0h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10127:4: error: expected ';' after expression
rtx x; // [rsp+20h] [rbp-98h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10127:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+20h] [rbp-98h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10148:1: error: use of undeclared identifier 'insn'
insn = insn_in_loop; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10160:10: error: expected ')'
|| ( rtx)insn_in_loop[4] == loop->top 
         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10159:9: note: to match this '('
else if ( *( _WORD *)insn_in_loop != 33 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10170:16: error: use of undeclared identifier 'insn'
v8 = ( __int64)insn[4]; 
               ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10190:23: error: use of undeclared identifier 'insn'
v13 = any_condjump_p( insn); 
                      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10196:41: error: use of undeclared identifier 'insn'
insn_in_loop = next_insn_in_loop( loop, insn); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10197:1: error: use of undeclared identifier 'insn'
insn = insn_in_loop; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10201:36: error: expected ')'
for ( i = loop->start; ; i = ( rtx)i[1] ) 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10201:5: note: to match this '('
for ( i = loop->start; ; i = ( rtx)i[1] ) 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10203:1: error: use of undeclared identifier 'insn'
insn = i; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/loop.c:10207:7: error: use of undeclared identifier 'insn'
v83 = insn; 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/load_mems/src/obj/loop.o] Error 1
